start splitting the project up
start splitting things up so it's not
all in one big source file. easier to read and
maintain this way

--- a/ntds2/ntds2.vcxproj.filters
+++ b/ntds2/ntds2.vcxproj.filters
@@ -27,12 +27,27 @@
     <ClInclude Include="ntds2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="decrypt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ntds_common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ntds_jet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ntds2.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="decrypt.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ntds_jet.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
