--- a/ntds2/ntds2.vcxproj
+++ b/ntds2/ntds2.vcxproj
@@ -79,12 +79,17 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="decrypt.h" />
     <ClInclude Include="ntds2.h" />
+    <ClInclude Include="ntds_common.h" />
+    <ClInclude Include="ntds_jet.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="decrypt.c" />
     <ClCompile Include="ntds2.c" />
+    <ClCompile Include="ntds_jet.c" />
     <ClCompile Include="stdafx.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
